src/objects/Apttus_Config2__AssetAttributeValueHistory__c.object
<CustomObject>
    <description>Represents the attribute values for a product class</description>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemId__c</fullName>
        <description>ID of the associated asset line item history</description>
        <inlineHelpText>ID of the associated asset line item history</inlineHelpText>
        <label>Asset Line Item History</label>
        <referenceTo>Apttus_Config2__AssetLineItemHistory__c</referenceTo>
        <relationshipLabel>Asset Attribute Values</relationshipLabel>
        <relationshipName>AssetAttributeValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingOffsetDays__c</fullName>
        <description>The number of days to delay the billing start date</description>
        <inlineHelpText>The number of days to delay the billing start date</inlineHelpText>
        <label>Billing Offset (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Color__c</fullName>
        <description>Product color</description>
        <inlineHelpText>Product color</inlineHelpText>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Vendor__c</fullName>
        <description>Product Vendor</description>
        <inlineHelpText>Product Vendor</inlineHelpText>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Asset Attribute Value History</label>
    <nameField>
        <displayFormat>AV-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Attribute Value History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>